# TransformerLens

./: .buildinfo  .coverage.Lucias-MacBook-Air.local.67990.863551  .env.example  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Attribution_Patching_Demo.ipynb  AutomaticCircuitDiscovery.ipynb  CI_COVERAGE_SPLIT_PLAN.md  CLAUDE.md  Clean_Transformer_Demo.ipynb  Clean_Transformer_Demo_Template.ipynb  Dockerfile  EasyTransformer_Demo.ipynb  EasyTransformer_demo.ipynb  Exploratory_Analysis_Demo.ipynb  For_Students_Clean_Transformer_Demo.ipynb  Grokking_Demo.ipynb  Hacky-Interactive-Lexoscope.ipynb  Induction_Heads_Demo.ipynb  Interactive Neuroscope.ipynb  Interpreting_Sorting_Demo.ipynb  LICENSE  Main_Demo.ipynb  New_Demo.ipynb  No_Position_Experiment.ipynb  OPEN_ISSUES_TRIAGE.md  OPEN_ISSUES_TRIAGE.v3.md  OPEN_ISSUES_TRIAGE.v4.md  OPEN_ISSUES_TRIAGE_OLD.md  README.md  README.txt  RNG_FIX_SUMMARY.md  SAE_INTEGRATION_PLAN.md  Test.ipynb  Tracr_to_Transformer_Lens_Demo.ipynb  UV_MIGRATION_SUMMARY.md  acronym_generation.py  (+74 more)
.claude-flow/data/: pending-insights.jsonl
.claude/commands/: add-model-support.md  build-docs.md  format.md  task-complete.md  test-all.md  test-unit.md  typecheck.md  verify-model.md
.cursor/rules/: transformerlens.mdc
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
_sources/: index.md.txt  transformer_lens.rst.txt
_static/: adapter-template.py  d_af97b5493da09a14_ActivationCache_py.html  d_af97b5493da09a14_FactoredMatrix_py.html  d_af97b5493da09a14_HookedEncoder_py.html  d_af97b5493da09a14_HookedSAEConfig_py.html  d_af97b5493da09a14_HookedSAETransformer_py.html  d_af97b5493da09a14_HookedSAE_py.html  d_af97b5493da09a14_HookedTransformerConfig_py.html  d_af97b5493da09a14_HookedTransformer_py.html  d_af97b5493da09a14_SVDInterpreter_py.html  d_af97b5493da09a14___init___py.html  d_af97b5493da09a14_components_py.html  d_af97b5493da09a14_evals_py.html  d_af97b5493da09a14_head_detector_py.html  d_af97b5493da09a14_hook_points_py.html  d_af97b5493da09a14_loading_from_pretrained_py.html  d_af97b5493da09a14_past_key_value_caching_py.html  d_af97b5493da09a14_patching_py.html  d_af97b5493da09a14_train_py.html  d_af97b5493da09a14_utils_py.html  d_b2114f845e0399b7___init___py.html  d_b2114f845e0399b7_devices_py.html  documentation_options.js  index.html  model_properties_table.jsonl
content/: citation.html  compatibility_mode.html  contributing.html  debugging_numerical_divergence.html  development.html  gallery.html  getting_started.html  getting_started_mech_interp.html  hook_system.html  migrating_to_v3.html  model_structure.html  model_tables.html  special_cases.html  tutorials.html
debugging/: comparing-to-huggingface.ipynb  hf-tl-logit-comparator.ipynb  qwen3_hf_compare.py
demos/: =4.31.0  ARENA_Content.ipynb  Activation_Patching_in_TL_Demo.ipynb  Attribution_Patching_Demo.ipynb  Attribution_Patching_Demo_LOCAL_48412.ipynb  Attribution_Patching_Demo_REMOTE_48412.ipynb  BERT.ipynb  Bloom.ipynb  Boot_External_Demo.ipynb  Boot_External_vLLM_Walkthrough.ipynb  Bridge_Evals_Demo.ipynb  Colab_Compatibility.ipynb  Config_Overhaul.ipynb  Direct_Logit_Attribution_Demo.ipynb  Direct_Path_Patching_Demo.ipynb  Exploratory_Analysis_Demo.ipynb  Exploratory_Analysis_Demo.ipynb.orig  GPT_OSS_Demo.ipynb  Gemma3_Multimodal.ipynb  Head_Detector_Demo.ipynb  Inspect_Bridge_Demo.ipynb  Inspect_vLLM_Provider_Demo.ipynb  Interactive_Neuroscope.ipynb  Jacobian_Lens_Demo.ipynb  LIT_Integration_Demo.ipynb  LLaMA.ipynb  LLaMA2_GPU_Quantized.ipynb  LLaMA2_GPU_quantized.ipynb  LLaVA.ipynb  Llama_quantized.ipynb  Main_Demo copy.ipynb  Main_Demo.ipynb  Main_Demo.ipynb.orig  Mistral.ipynb  New_Demo.ipynb  No_Position_Experiment.ipynb  Othello_GPT.ipynb  Patchscopes_Generation_Demo.ipynb  Qwen.ipynb  Realtime_Training_Telemetry_Demo.ipynb  (+18 more)
docs/: README.md  make_docs.py  overview.md
easy_transformer/: ActivationCache.py  EasyBERT.py  EasyBERTConfig.py  EasyTransformer.py  EasyTransformerConfig.py  EasyTransformerKeyValueCache.py  FactoredMatrix.py  __init__.py  activation_cache.py  advex.py  completeness.py  components.py  easy_transformer.py  evals.py  experiments.py  hook_points.py  ioi_circuit_extraction.py  ioi_utils.py  loading_from_pretrained.py  make_docs.py  minimality.py  past_key_value_caching.py  train.py  utils.py  utils_circuit_discovery.py  weight_conversion.py
examples/: openelm_generation.py
hf_qwen/: modeling_qwen.py
legacy/: LEGACY_README.md  easy_transformer
pts/: complete_name.pt  complete_perf_by_sets.pt  complete_random_xs.pt  complete_random_ys.pt  complete_xs.pt  complete_ys.pt  early_results.pt  latter_results.pt  naive_name.pt  naive_perf_by_sets.pt  naive_random_xs.pt  naive_random_ys.pt  naive_random_ys2.pt  naive_xs.pt  naive_ys.pt
scripts/: bridge_multi_device_parity.py  inspect_parity_report.py  vllm_parity_report.py
sets/: greedy_circuit_perf_NAIVE_rd_Search.json  greedy_circuit_perf_natural_circuit_rd_Search.json  perf_naive_circuit_by_classes.json
tests/: AGENTS.md  QUARANTINES.md  conftest.py  test_transformer_bridge_compatibility.py  test_transformer_bridge_hooks.py
transformer_lens/: ActivationCache.py  BertNextSentencePrediction.py  EasyTransformer.py  FactoredMatrix.py  HookedAudioEncoder.py  HookedEncoder.py  HookedEncoderConfig.py  HookedEncoderDecoder.py  HookedRootModule.py  HookedSAE.py  HookedSAEConfig.py  HookedSAETransformer.py  HookedTransformer.py  HookedTransformerConfig.py  HookedVisualEncoder.py  NextSentencePrediction.py  SVDInterpreter.py  TransformerLens.py  TransformerLensConfig.py  __init__.py  boot.py  components.py  direct_path_patching.py  evals.py  head_detector.py  hook_points.py  loading_from_pretrained.py  make_docs.py  model_properties_table.md  model_protocol.py  my_sesh.py  past_key_value_caching.py  patching.py  supported_models.py  svd_interpreter.py  tokenization_utils.py  torchtyping_helper.py  train.py  typecheck.py  utils.py  (+1 more)
utilities/: run_all_benchmarks.py
(+1752 files in other folders)
