[project]
    authors=[{name="Neel Nanda", email="77788841+TransformerLensOrg@users.noreply.github.com"}]
    dependencies=[
        "accelerate>=0.23.0",                                                # Needed for Llama Models
        "beartype>=0.14.1",
        "better-abc>=0.0.3",
        "datasets>=2.7.1",
        "einops>=0.6.0",
        "fancy-einsum>=0.0.3",
        "huggingface-hub>=0.23.2",
        "jaxtyping>=0.2.11",
        "numpy>=1.24; python_version >= '3.10' and python_version < '3.12'",
        "numpy>=1.26; python_version >= '3.12' and python_version < '3.13'",
        "packaging>=23.0",
        "pandas>=1.1.5",
        "protobuf>=3.20.0",
        "rich>=12.6.0",
        "sentencepiece",
        "torch>=2.6",
        # Pin to the torchvision that pairs with the project's torch 2.7.x so adding
        # it for multimodal processors doesn't force a repo-wide torch upgrade.
        "torchvision>=0.22,<0.23",
        "tqdm>=4.64.1",
        "transformers-stream-generator>=0.0.5,<0.1",
        "transformers>=5.4.0",
        "typeguard>=4.2,<5",
        "typing-extensions",
        "wandb>=0.13.5",
]
    description="An implementation of transformers tailored for mechanistic interpretability."
    license={text="MIT"}
    name="transformer-lens"
    packages=[{include="transformer_lens"}, {include="transformer_lens/py.typed"}]
    readme="README.md"
    requires-python=">=3.10,<4.0"
    version="0.0.0"

    [project.optional-dependencies]
        # chardet<6 works around a `requests<=2.32` compatibility-check warning that fires
        # whenever chardet>=6 is installed. Remove the pin when psf/requests bumps the cap.
        evals=["lm-eval>=0.4", "chardet<6"]
        inspect=["inspect_ai>=0.3"]
        lit=["lit-nlp>=1.3"]

    [project.scripts]
        build-docs="docs.make_docs:build_docs"
        docs-hot-reload="docs.make_docs:docs_hot_reload"

    # Registers our HF-backed activation-extraction provider with inspect_ai so
    # get_model("tl_bridge/<model>") resolves it once the package is installed.
    # (Named tl_bridge, not transformer_lens — inspect_ai ships a built-in by that name.)
    # tl_bridge_vllm is the vLLM-backed sibling (lazy vllm import in __init__ so
    # the module imports cleanly without vllm installed).
    [project.entry-points.inspect_ai]
        tl_bridge="transformer_lens.model_bridge.sources.inspect.transformers_provider"
        tl_bridge_vllm="transformer_lens.model_bridge.sources.inspect.vllm_provider"

[dependency-groups]
    demo=["gradio>=4.0.0", "orjson>=3.11.7,<4.0"]
    dev=[
        "black>=23.3.0",
        "circuitsvis>=1.38.1",
        "ipython>=8.0.0",
        "isort==5.8.0",
        "jupyter>=1.0.0",
        "mypy>=1.10.0",
        "nbval>=0.10.0",
        "plotly>=5.12.0",
        "pycln>=2.1.3",
        "pytest-cov>=4.0.0",
        "pytest-doctestplus>=1.0.0",
        "pytest-rerunfailures>=12.0",
        "pytest-xdist>=3.8.0",
        "pytest>=7.2.0",
    ]
    docs=[
        "furo>=2023.3.27,<2024.0.0",
        "muutils>=0.6.13",
        "myst-parser>=2.0.0,<3.0.0",
        "nbconvert>=7.9.2",
        "nbsphinx>=0.9.3",
        "pandoc>=2.3",
        "snowballstemmer",
        "sphinx-autobuild>=2021.3.14,<2022.12.7",
        "sphinx>=7.0.0,<8.0.0",
        "sphinxcontrib-napoleon>=0.7",
        "tabulate>=0.9.0",
    ]
    jupyter=["ipywidgets>=8.1.1", "jupyterlab>=3.5.0"]
    # Vision/audio deps for multimodal adapters (Gemma 3n's vision tower needs timm; image
    # processors need torchvision). In default-groups so contributor/CI test runs install them,
    # while downstream users get a light core install. torchvision is pinned to the release
    # pairing with torch 2.7.x so it doesn't force a repo-wide torch upgrade.
    multimodal=["timm>=1.0.27", "torchvision>=0.22,<0.23"]
    quantization=["bitsandbytes>=0.46.1", "optimum-quanto>=0.2.7"]

[tool.uv]
    default-groups=["dev", "docs", "jupyter", "multimodal"]

[tool.pytest]

    [tool.pytest.ini_options]
        addopts=[
            "--doctest-modules",
            "--doctest-plus",
            "--jaxtyping-packages=transformer_lens,beartype.beartype",
            "--nbval",
            "-W ignore::beartype.roar.BeartypeDecorHintPep585DeprecationWarning",
        ]
        doctest_optionflags="NORMALIZE_WHITESPACE ELLIPSIS FLOAT_CMP"
        filterwarnings=[
            "ignore:distutils Version classes are deprecated:DeprecationWarning",
            "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
        ]
        markers=[
            "slow: marks tests as slow (deselect with '-m \"not slow\"')",
            "inspect: requires inspect_ai (deselect with '-m \"not inspect\"')",
        ]
        pythonpath=["."]
        testpaths=["tests", "transformer_lens"] # Only test these directories

[tool.isort]
    extend_skip=[".venv/", "__init__.py"]
    profile="black"

[tool.mypy]
    check_untyped_defs=true
    exclude=[".venv/", "assets", "demos", "docs", "easy_transformer", "tests"]
    ignore_missing_imports=true

[tool.black]
    line-length=100 # Set line length to 100 to match other tools
    # Exclude snapshot tests, .venv, and Sphinx build output (autogenerated)
    exclude='''
(
/snapshots/
| \.venv/
| docs/build/
)
'''

[tool.pylint]
    [tool.pylint.TYPECHECK]
        # Fix for Pytorch member existence checks
        generated-members="torch.*"

    [tool.pylint.DESIGN]
        max-args=10
        max-locals=30

    [tool.pylint."MESSAGES CONTROL"]
        disable="redefined-builtin" # Disable redefined builtin functions

    [tool.pylint.'MASTER']
        disable=[
            "C0103", # Disable invalid file name (as we use PascalCase for classes)
        ]

[build-system]
    build-backend="hatchling.build"
    requires=["hatchling"]

[tool.pyright]
    # All rules apart from base are shown explicitly below
    deprecateTypingAliases=true
    disableBytesTypePromotions=true
    exclude=["!/transformer_lens/hook_points.py", "*/**/*.py"]
    reportAssertAlwaysTrue=true
    reportConstantRedefinition=true
    reportDeprecated=true
    reportDuplicateImport=true
    reportFunctionMemberAccess=true
    reportGeneralTypeIssues=true
    reportIncompatibleMethodOverride=true
    reportIncompatibleVariableOverride=true
    reportIncompleteStub=true
    reportInconsistentConstructor=true
    reportInvalidStringEscapeSequence=true
    reportInvalidStubStatement=true
    reportInvalidTypeVarUse=true
    reportMatchNotExhaustive=true
    reportMissingParameterType=true
    reportMissingTypeArgument=false
    reportMissingTypeStubs=false
    reportOptionalCall=true
    reportOptionalContextManager=true
    reportOptionalIterable=true
    reportOptionalMemberAccess=true
    reportOptionalOperand=true
    reportOptionalSubscript=true
    reportOverlappingOverload=true
    reportPrivateImportUsage=true
    reportPrivateUsage=true
    reportSelfClsParameterName=true
    reportTypeCommentUsage=true
    reportTypedDictNotRequiredAccess=true
    reportUnboundVariable=true
    reportUnknownArgumentType=false
    reportUnknownLambdaType=true
    reportUnknownMemberType=false
    reportUnknownParameterType=false
    reportUnknownVariableType=false
    reportUnnecessaryCast=true
    reportUnnecessaryComparison=true
    reportUnnecessaryContains=true
    reportUnnecessaryIsInstance=true
    reportUnsupportedDunderAll=true
    reportUntypedBaseClass=true
    reportUntypedClassDecorator=true
    reportUntypedFunctionDecorator=true
    reportUnusedClass=true
    reportUnusedCoroutine=true
    reportUnusedExpression=true
    reportUnusedFunction=true
    reportUnusedImport=true
    reportUnusedVariable=true
    reportWildcardImportFromLibrary=true
    strictDictionaryInference=true
    strictListInference=true
    strictParameterNoneValue=true
    strictSetInference=true
